--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 
 <head>
     <link rel="stylesheet" href="styles.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"
     <title>Aluraflix</title>
 </head>
 
 <body>
+ 
     <header>ALURAFLIX</header>
 
 <section>
@@ -13,7 +17,7 @@
         <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
         <p>#homem-aranha</p>
     </div>
-</section>
+
         <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=c93nZtO1DTNYueO4"
                 title="YouTube video player" frameborder="0"
